[package]
name = "awsm-material-editor"
description = "Standalone editor for authoring runtime-registered awsm-renderer custom materials."
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
awsm-materials = { path = "../../materials" }
awsm-meshgen = { path = "../../meshgen" }
awsm-renderer = { path = "../../renderer", features = ["ktx", "serde"] }
awsm-renderer-core = { path = "../../renderer-core" }
awsm-scene-schema = { path = "../../scene-schema" }
awsm-web-shared = { path = "../../web-shared" }

glam = { workspace = true }

anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
futures = { workspace = true }

dominator = "0.5.38"
futures-signals = "0.3.34"
gloo-render = "0.2.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
xutex = "0.2.1"

[dependencies.web-sys]
workspace = true
features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlTextAreaElement",
    "HtmlInputElement",
    "HtmlElement",
    "Event",
    "InputEvent",
    "KeyboardEvent",
    # Deep-link (?folder=<name>) flow uses the FS Access API to read
    # material.json + shader.wgsl out of a user-picked directory.
    "DirectoryPickerOptions",
    "FileSystemHandle",
    "FileSystemHandleKind",
    "FileSystemPermissionMode",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
]
